--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>{{ page.title }}</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/">About</a></li>
+        		<li><a href="https://www.linkedin.com/in/marksebald/">LinkedIn</a></li>
+        		<li><a href="http://www.marksense.net">Blog</a></li>
+    		</ul>
+		</nav>
+			<div class="container">
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:mdsebald@gmail.com">email</a></li>
+        		<li><a href="https://github.com/mdsebald">github.com/mdsebald</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
