--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/">About</a></li>
-        		<li><a href="https://www.linkedin.com/in/marksebald/">LinkedIn</a></li>
-        		<li><a href="http://www.marksense.net">Blog</a></li>
+        		
     		</ul>
 		</nav>
 			<div class="container">
@@ -21,9 +20,12 @@
 			
 			</div><!-- /.container -->
 		<footer>
-    		<ul>
+    		   	<ul>
         		<li><a href="mailto:mdsebald@gmail.com">email</a></li>
-        		<li><a href="https://github.com/mdsebald">github.com/mdsebald</a></li>
+        		<li><a href="https://github.com/mdsebald">github</a></li>
+			<li><a href="https://www.linkedin.com/in/marksebald/">linkedin</a></li>
+			<li><a href="http://www.marksense.net">blog</a></li>
+			<li><a href="https://twitter.com/mdsebald">twitter</a></li>
 			</ul>
 		</footer>
 	</body>
