--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         		<li><a href="mailto:mdsebald@gmail.com">email</a></li>
         		<li><a href="https://github.com/mdsebald">github</a></li>
 			<li><a href="https://www.linkedin.com/in/marksebald/">linkedin</a></li>
-			<li><a href="http://www.marksense.net">blog</a></li>
+			<li><a href="http://www.mdsebald.org">blog</a></li>
 			<li><a href="https://twitter.com/mdsebald">twitter</a></li>
 			</ul>
 		</footer>
